@@ -1,6 +1,7 @@
 2016-05-04  SilverNexus
 	* main.c: Change the loop for performing each root search to a do-while loop.
 	* parseArgs.c: Refactor the required argument value check to a macro.
+	  Refactored the numeric value check for -l and -p to use fewer cycles.
 
 2016-05-03  SilverNexus
 	* main.c: Fixed the initial argument quantity check to account for the
